[metadata]
name = openaiapi
version = 0.0.1
description = A light wrapper around the OpenAI API using apiron
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daneah/openaiapi
author = Dane Hillard
author_email = "Dane Hillard" <github@danehillard.com>
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
package_dir =
    =src
packages = find_namespace:
include_package_data = True
install_requires =
    apiron>=7.0.0
    urllib3>=1.26.13,<2

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = openaiapi
branch = True

[coverage:report]
fail_under = 100.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/openaiapi
    **/site-packages/openaiapi

[tox:tox]
envlist = py39,py310,py311
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
    pytest-randomly
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
commands =
    mypy {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}

[testenv:docs]
deps =
    furo
    sphinx
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/openaiapi/
    sphinx-build -W --keep-going -b html docs/ docs/_build/

[testenv:devdocs]
deps =
    furo
    sphinx
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/openaiapi/ \
    sphinx-autobuild -W -b html docs/ docs/_build/
